--- a/Desafio 3/index.html
+++ b/Desafio 3/index.html
@@ -6,6 +6,9 @@
 	<title>Kitanda - JS</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<script>
+	var n =
+</script>
 <body>
 	<main class="flex flex-column">
 		<h1>NOSSA KITANDA</h1>
